Finished analysis question 2 comparing DO upstream and downstream before and after dam removal

--- a/Code/InitialDataExploration.Rmd
+++ b/Code/InitialDataExploration.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(ggridges)
 
-install.packages('patchwork')
+#install.packages('patchwork')
 library(patchwork)
 
 
